<resources>
    <string name="app_name">Instagram UnfollowTracker</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home_title">Instagram UnfollowTracker</string>
    <string name="make_analysis_title">Make Analysis</string>
    <string name="see_analysis_title">See Analysis</string>
    <string name="see_analysis_list_title">See Analysis List</string>
    <string name="select_following_json">Select following.json file</string>
    <string name="select_follower_json">Select follower.json file</string>
    <string name="follower_users">Follower Users</string>
    <string name="following_users">Following Users</string>
    <string name="unf_users">Unfollow Users</string>
    <string name="minutes_ago"> minutes ago</string>
    <string name="hours_ago"> hours ago</string>
    <string name="check_selected_follower">Follower Selected State</string>
    <string name="check_selected_following">Following Selected State</string>
    <string name="make_analysis_text">MAKE ANALYSIS</string>
    <string name="see_analysis">SEE ANALYSIS</string>
    <string name="how_to_use">HOW TO USE?</string>
    <string name="make_analysis">MAKE ANALYSIS</string>
    <string name="unf_users_title_text">These are people you follow but who do not follow you back.</string>
    <string name="follower_users_text">These are people follow you.</string>
    <string name="following_users_text">These are people you follow.</string>
    <string name="be_sure_right_file">Be sure that you select true file.</string>
    <string name="visit_analysis_page">Analysis completed. You can visit analysis page.</string>
</resources>